the safety check was a bit too strict, fdo#77984

Change-Id: Idfc3b3dd1d9f4de428e43c515b13a8d7e40e347c